# u-boot-bl30-rtos_sdk-drivers_aocpu

./: CMakeLists.txt  Kconfig
cec/: CMakeLists.txt  Kconfig  hdmi_cec.c  hdmi_cec.h  hdmi_cec_reg.h
common/: CMakeLists.txt  Kconfig  drv_errno.h
ddr/: CMakeLists.txt  Kconfig  ddr.c  ddr.h
eth/: eth.c  eth.h
ethernet/: eth.c
fd650/: fd650.c
get_version/: CMakeLists.txt  Kconfig  version.c
gpio/: CMakeLists.txt  Kconfig  gpio.c  gpio.h  gpio_a4_plat.c  gpio_a5_plat.c  gpio_drv.h  gpio_irq.c  gpio_irq.h  gpio_s5_plat.c  gpio_t5d_plat.c  gpio_t5w_plat.c
hwspinlock/: CMakeLists.txt
i2c/: i2c.c  meson_i2c.h  s5_plat.c  t5m_plat.c
ir/: CMakeLists.txt  Kconfig  ir.c  ir.h  ir_drv.h  ir_regmap.c
key/: CMakeLists.txt  Kconfig  adc_key.c  dynamic_keypad.c  gpio_key.c  keypad.h
leds/: CMakeLists.txt  leds_s5_plat.c  leds_state.c  leds_state.h  leds_t5d_plat.c  leds_t5w_plat.c
mailbox/: CMakeLists.txt  Kconfig  mailbox-api.h  mailbox-htbl.c  mailbox-htbl.h  mailbox-in.h  mailbox-irq.c  mailbox-irq.h  mailbox-pl-in.h  mailbox-pl.c  mailbox.c  rpc-user.c  rpc-user.h
pmic/: bd71837.c  bd71837.h  pmic.c  pmic.h
pwm/: CMakeLists.txt  Kconfig  pwm.h  pwm_a5_plat.c  pwm_meson_v2.c  pwm_s1a_plat.c  pwm_s5_plat.c  pwm_s6_plat.c  pwm_s7_plat.c  pwm_s7d_plat.c  pwm_t3x_plat.c  pwm_t5w_plat.c  pwm_txhd2_plat.c
rtc/: Kconfig  rtc.c  rtc.h
saradc/: CMakeLists.txt  Kconfig  saradc.c  saradc.h  saradc_c2.c
stick_mem/: CMakeLists.txt  Kconfig  stick_mem.c  stick_mem.h
str/: CMakeLists.txt  Kconfig  pm.h  suspend.c  suspend.h  suspend_debug.h
uart/: Kconfig  (+3 more)
(+7 files in other folders)
